# discord-work-status

./: .gitignore  LICENSE  README.md  flake.nix  package.json
.github/workflows/: ci.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  rpc.rs
