[package]
name = "discord-work-status"
version = "0.0.1"
description = "Discord Rich Presence を自由に設定できるデスクトップアプリ"
authors = ["nusk"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
name = "discord_work_status_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-rich-presence = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
